<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_channel_id">channelId</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_check">Check the status</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download</string>

    <string name="title_activity_detail">DetailActivity</string>


    <string name="option_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="option_loadapp">LoadApp - Current project by Udacity</string>
    <string name="option_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="ok">OK</string>
    <string name="notification_icon_description">Notification Icon</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notifications_description">Allow notifications to receive updates about your download status.</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="not_now">Not Now</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>

    <declare-styleable name="LoadingButton">
        <attr name="buttonBackgroundColor" format="color" />
        <attr name="buttonTextColor" format="color" />
        <attr name="buttonText" format="string" />
    </declare-styleable>
</resources>